--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@ body{background-color: hsl(212, 45%, 89%);
     height:470px;
     padding:15px;
     border-radius: 15px;    }
-img{border-radius: 10px;}
+img{height:288px;
+    width="288px;
+    border-radius: 10px;}
 h1{font-size: 22px;
     text-align: center;
     color: hsl(218, 44%, 22%);
