--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{background-color: hsl(212, 45%, 89%);
     padding:15px;
     border-radius: 15px;    }
 img{height:288px;
-    width="288px;
+    width:288px;
     border-radius: 10px;}
 h1{font-size: 22px;
     text-align: center;
